--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,8 @@
       "css/qwebirc.css",
       "css/jqueryui_icons.css",
       "css/modifiablecss.mcss",
-      "js/hacks.js",
+
+      "js/qwebirc-0.93dev.js",
 
       "img/ui-icons_222222_256x240.png",
       "img/ui-icons_2e83ff_256x240.png",
