--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
       "css/jqueryui_icons.css",
       "css/modifiablecss.mcss",
 
-      "js/qwebirc-0.93dev.js",
+      "js/dist/qwebirc-0.93dev.js",
 
       "img/ui-icons_222222_256x240.png",
       "img/ui-icons_2e83ff_256x240.png",
