Bunch of Maintenance: see description
In the order of what I remember

Moved windows to an Epitome.View*** many changes (delegation, element
storing, rendering etc [reduced memory consumed])
Fixed Drag.SplitPane
Updated mootools version from 1.4.5 to 1.4.5-no-compat
Changed libs
New templates
New options
More descriptive method names
Fixed whois listener
Fixed Epitome.Events bug #12
More command ui decoupling (almost there)

--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,7 @@
       "css/modifiablecss.mcss",
 
       "js/dist/qwebirc-0.93dev.js",
+      "js/dist/mootools-1.4.5.js",
 
       "img/ui-icons_222222_256x240.png",
       "img/ui-icons_2e83ff_256x240.png",
