--- a/package.json
+++ b/package.json
@@ -28,10 +28,14 @@
     "grunt-contrib-uglify": "*",
     "js-beautify": "1.3.x",
     "grunt-html-build": "0.3.x",
-    "grunt-contrib-cssmin": "0.7.x"
+    "grunt-contrib-cssmin": "0.7.x",
+    "grunt-template": "0.2.x"
   },
   "build": {
     "minify": false,
-    "concat": false
+    "concat": false,
+    "use cdn": true,
+    "node server": true,
+    "twisted server": true
   }
 }
