--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "js-beautify": "1.3.x",
     "grunt-html-build": "0.3.x",
     "grunt-contrib-cssmin": "0.7.x",
-    "grunt-template": "0.2.x"
+    "grunt-template": "0.2.x",
+    "grunt-bumpup": "~0.5.0",
+    "matchdep": "~0.3.0",
+    "grunt-tagrelease": "~0.3.1"
   },
   "build": {
     "minify": false,
