--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   "devDependencies": {
     "grunt": ">= 0.4.0",
     "grunt-contrib-handlebars": "0.5.x",
-    "grunt-contrib-concat": "*",
-    "grunt-contrib-uglify": "*",
+    "grunt-contrib-concat": "0.4.x",
+    "grunt-contrib-uglify": "0.3.x",
     "js-beautify": "1.3.x",
     "grunt-html-build": "0.3.x",
     "grunt-contrib-cssmin": "0.7.x",
