--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "grunt-template": "0.2.x",
     "grunt-bumpup": "~0.5.0",
     "matchdep": "~0.3.0",
-    "grunt-tagrelease": "~0.3.1"
+    "grunt-tagrelease": "~0.3.1",
+    "grunt-concat-in-order": "~0.1.6"
   }
 }
