--- a/package.json
+++ b/package.json
@@ -22,17 +22,16 @@
     "node": ">= 0.6.0"
   },
   "devDependencies": {
-    "grunt": ">= 0.4.0",
+    "grunt": "0.4.x",
     "grunt-contrib-handlebars": "0.5.x",
-    "grunt-contrib-concat": "0.4.x",
+    "grunt-contrib-concat": "0.3.x",
     "grunt-contrib-uglify": "0.3.x",
-    "js-beautify": "1.3.x",
+    "grunt-concat-in-order": "~0.1.6",
     "grunt-html-build": "0.3.x",
     "grunt-contrib-cssmin": "0.7.x",
-    "grunt-template": "0.2.x",
-    "grunt-bumpup": "~0.5.0",
     "matchdep": "~0.3.0",
+    "grunt-bumpup": "~0.5.0",
     "grunt-tagrelease": "~0.3.1",
-    "grunt-concat-in-order": "~0.1.6"
+    "js-beautify": "1.3.x"
   }
 }
