--- a/package.json
+++ b/package.json
@@ -23,15 +23,14 @@
   },
   "devDependencies": {
     "grunt": "0.4.x",
+    "matchdep": "~0.3.0",
     "grunt-contrib-handlebars": "0.5.x",
     "grunt-contrib-concat": "0.3.x",
     "grunt-contrib-uglify": "0.3.x",
     "grunt-concat-in-order": "~0.1.6",
-    "grunt-html-build": "0.3.x",
+    "grunt-html-build": "~0.3.2",
     "grunt-contrib-cssmin": "0.7.x",
-    "matchdep": "~0.3.0",
     "grunt-bumpup": "~0.5.0",
-    "grunt-tagrelease": "~0.3.1",
-    "js-beautify": "1.3.x"
+    "grunt-tagrelease": "~0.3.1"
   }
 }
