--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "grunt-html-build": "~0.3.2",
     "grunt-contrib-cssmin": "0.7.x",
     "grunt-bumpup": "~0.5.0",
-    "grunt-tagrelease": "~0.3.1"
+    "grunt-tagrelease": "~0.3.1",
+    "grunt-contrib-csslint": "~0.2.0",
+    "grunt-csscomb": "~2.0.1",
+    "grunt-contrib-less": "~0.9.0",
+    "grunt-autoprefixer": "~0.7.2"
   }
 }
