--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "grunt-csscomb": "2.0",
     "grunt-autoprefixer": "~0.7.2",
     "grunt-html-build": "0.3",
-    "grunt-bumpup": "~0.5.0",
-    "grunt-tagrelease": "~0.3.1",
+    "grunt-release": "0.7",
     "grunt-file-info": "~1.0.4",
-    "matchdep": "~0.3.0"
+    "matchdep": "~0.3.0",
+    "moment": "2.5"
   },
   "frontend-dependencies": {
     "twbs": {
