--- a/build-files.yml
+++ b/build-files.yml
@@ -19,6 +19,7 @@
     },
     "modules": [
         "js/modules/respond.js",
+        "js/modules/mootools-1.4.5.js",
         "js/modules/Handlebars-production.js",
         "js/modules/Promise.js",
         "js/modules/underscore.js",
@@ -29,29 +30,24 @@
         "js/libs/Epitome/*.js"
     ],
     "full": [
-        "dist/js/plugins-<%= suffix %>.js",
-        "dist/js/templates-<%= suffix %>.js",
-        "dist/js/qwebirc-<%= suffix %>.js"
+        "dist/js/plugins<%= suffix %>.js",
+        "dist/js/templates<%= suffix %>.js",
+        "dist/js/qwebirc<%= suffix %>.js"
     ],
 
     "resources": {
         "qwebirc templates": {
-            "local": "dist/dist/templates-<%= suffix %>.js",
-            "local min": "dist/dist/templates-<%= suffix %>.js"
+            "local": "dist/dist/templates<%= suffix %>.js",
+            "local min": "dist/dist/templates<%= suffix %>.js"
         },
 
         "qwebirc css": {
-            "local": "dist/css/qwebirc-<%= suffix %>.css",
-            "local min": "dist/css/qwebirc-<%= suffix %>.css"
+            "local": "dist/css/qwebirc<%= suffix %>.css",
+            "local min": "dist/css/qwebirc<%= suffix %>.css"
         },
         "bootstrap css": {
             "local": "dist/css/bootstrap-<%= pkg['frontend-dependencies'].twbs.version %>.css",
             "local min": "dist/css/bootstrap-<%= pkg['frontend-dependencies'].twbs.version %>.css"
-        },
-        "mootools": {
-            "cdn": "//cdn.jsdelivr.net/mootools/1.4.5/mootools-core-nocompat.js",
-            "cdn min": "//cdn.jsdelivr.net/mootools/1.4.5/mootools-core-nocompat.min.js",
-            "local": "js/modules/mootools-1.4.5.js"
         },
         "soundManager": {
             "cdn": "//cdn.jsdelivr.net/soundmanager2/2.97a.20130512/soundmanager2-nodebug-jsmin.js",
@@ -59,8 +55,8 @@
         },
         "modules": {
             # not including soundManager2 here so users can disable sound and not load code
-            "cdn": "//cdn.jsdelivr.net/g/respond@1.4,handlebarsjs@1.3,es6-promise,underscorejs@1.6,one-color@2.4",
-            "local": "/dist/js/modules-<%= suffix %>.js"
+            "cdn": "//cdn.jsdelivr.net/g/respond@1.4,mootools@1.4.5,handlebarsjs@1.3,es6-promise,underscorejs@1.6,one-color@2.4",
+            "local": "/dist/js/modules<%= suffix %>.js"
         },
 
         "jQuery-images": {
