--- a/package.json
+++ b/package.json
@@ -35,11 +35,17 @@
     "grunt-contrib-less": "0.10",
     "grunt-contrib-csslint": "0.2",
     "grunt-contrib-cssmin": "0.7",
+    "grunt-contrib-connect": "0.7",
+    "grunt-connect-proxy": "~0.1.10",
+    "grunt-contrib-jshint": "0.10",
     "grunt-csscomb": "2.0",
     "grunt-autoprefixer": "~0.7.2",
     "grunt-html-build": "0.3",
     "grunt-release": "0.7",
     "grunt-file-info": "~1.0.4",
+    "grunt-mocha": "0.4",
+    "chai": "1.9",
+    "mocha": "1.18",
     "matchdep": "~0.3.0",
     "moment": "2.5",
     "lodash": "2.4",
