--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "grunt-release": "0.7",
     "grunt-file-info": "~1.0.4",
     "grunt-mocha": "0.4",
-    "chai": "1.9",
     "mocha": "1.18",
+    "should": "3.3",
     "matchdep": "~0.3.0",
     "moment": "2.5",
     "lodash": "2.4",
