--- a/test/.jshintrc
+++ b/test/.jshintrc
@@ -1,7 +1,7 @@
 {
     "globals": {
         "mocha": true,
-        "Should": true,
+        "expect": true,
         "describe": true,
         "it": true,
 
