--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "matchdep": "~0.3.0",
     "moment": "2.5",
     "lodash": "2.4",
-    "toSrc": "~0.1.3"
+    "toSrc": "~0.1.3",
+    "sinon": "~1.9.1"
   },
   "frontend-dependencies": {
     "twbs": {
