--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "file": "licence.lic"
   },
   "scripts": {
-    "test": "grunt test --verbose"
+    "test": "grunt test"
   },
   "devDependencies": {
     "grunt": "0.4",
@@ -44,8 +44,8 @@
     "grunt-release": "0.7",
     "grunt-file-info": "~1.0.4",
     "grunt-mocha": "0.4",
-    "mocha": "^1.18",
-    "expect.js": "^0.3.1",
+    "mocha": "1.18",
+    "expect.js": "0.3",
     "matchdep": "~0.3.0",
     "moment": "2.5",
     "lodash": "2.4",
