--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
     "grunt-contrib-less": "0.10",
     "grunt-contrib-csslint": "0.2",
     "grunt-contrib-cssmin": "0.7",
-    "grunt-contrib-connect": "0.7",
     "grunt-contrib-jshint": "0.10",
     "grunt-csscomb": "2.0",
     "grunt-autoprefixer": "~0.7.2",
     "grunt-html-build": "0.3",
     "grunt-release": "0.7",
     "grunt-file-info": "~1.0.4",
+    "grunt-express": "~1.2.1",
     "grunt-mocha": "0.4",
     "mocha": "1.18",
     "expect.js": "0.3",
@@ -49,7 +49,8 @@
     "moment": "2.5",
     "lodash": "2.4",
     "toSrc": "~0.1.3",
-    "sinon": "~1.9.1"
+    "sinon": "~1.9.1",
+    "express": "4.0"
   },
   "frontend-dependencies": {
     "twbs": {
