--- a/build.yml
+++ b/build.yml
@@ -1,6 +1,6 @@
 {
     #minify source files?
-    "minify": false,
+    "minify": true,
     # compile all local source files into a large file
     # Note: according to html5 rocks the optimal script size (for caching) is <125 kB
     # I've set up the build scripts with this in mind so `concat` may not be recommended
@@ -17,5 +17,5 @@
     "atheme": false,
 
     # In debug mode? console debug statements may be outputted
-    "debug": true
+    "debug": false
 }
