--- a/app-config.yml
+++ b/app-config.yml
@@ -32,7 +32,7 @@ init_config:
         channels: #[]
         auth: #false
     #demand authentication -- not setable by user
-    require_auth: false #require authentication?
+    requireAuth: false #require authentication?
     parseQueryString: true #should the query string be parse for option presets see https://github.com/megawac/qwebirc-enhancements#configuration
 
 user_settings:
@@ -40,6 +40,8 @@ user_settings:
 
 qwebirc_config: #random variables you may wish to settings
     auth_command: #defaults to "AUTHSERV AUTH {username} {password}" though I've seen many different commands
+
+    password_format: "{username} {password}" #for instance "{password}"
 
     base_url: /
     static_url: /
