--- a/build-files.yml
+++ b/build-files.yml
@@ -55,7 +55,10 @@
             "cdn": "//cdn.jsdelivr.net/g/respond@1.4,mootools@1.4.5,handlebarsjs@1.3,es6-promise,underscorejs@1.6,one-color@2.4",
             "local": "dist/js/modules<%= suffix %>.js"
         },
-
+        "entypo": {
+            "cdn": "//cdn.jsdelivr.net/entypo-fontello/0.1/entypo.css",
+            "local": "font/entypo.css"
+        },
         "jQuery-images": {
             "cdn": "//ajax.googleapis.com/ajax/libs/jqueryui/1.8.7/themes/smoothness/images",
             "local": "images"
