Add jsdelivr tracker by default
https://github.com/jsdelivr/jsdelivr#contribute-performance-data

--- a/app-config.yml
+++ b/app-config.yml
@@ -50,8 +50,16 @@ qwebirc_config: #random variables you may wish to settings
 
     timeout: #timeout requests after period
 
-    extra_html: #for instance google analytics code
-
+    #for instance google analytics code. Below is jsdelivr tracking https://github.com/jsdelivr/jsdelivr#contribute-performance-data
+    extra_html: >
+        <script type="text/javascript">
+        (function(w, d) { var a = function() { var a = d.createElement('script'); a.type = 'text/javascript';
+        a.async = 'async'; a.src = '//' + ((w.location.protocol === 'https:') ? 's3.amazonaws.com/cdx-radar/' :
+        'radar.cedexis.com/') + '01-11475-radar10.min.js'; d.body.appendChild(a); };
+        if (w.addEventListener) { w.addEventListener('load', a, false); }
+        else if (w.attachEvent) { w.attachEvent('onload', a); }
+        }(window, document));
+        </script>
 templates: ## any data you would like to prefill the handlebars templates
     feedback_form_url: https://docs.google.com/forms/d/1DQUg-DOEMbmqqeCryhMr6t20m2EMSkng28HdWIUm2vM/viewform
 
