--- a/package.json
+++ b/package.json
@@ -26,30 +26,32 @@
   "scripts": {
     "test": "grunt test"
   },
-  "devDependencies": {
-    "grunt": "0.4",
-    "grunt-contrib-handlebars": "0.7",
-    "grunt-contrib-concat": "0.3",
-    "grunt-contrib-uglify": "0.3",
-    "grunt-concat-in-order": "0.1",
-    "grunt-contrib-less": "0.10",
-    "grunt-contrib-csslint": "0.2",
-    "grunt-contrib-cssmin": "0.7",
+  "optionalDependencies": {
     "grunt-contrib-jshint": "0.10",
-    "grunt-csscomb": "2.0",
-    "grunt-autoprefixer": "~0.7.2",
-    "grunt-html-build": "0.3",
-    "grunt-release": "0.7",
-    "grunt-file-info": "~1.0.4",
     "grunt-express": "~1.2.1",
     "grunt-mocha": "0.4",
-    "mocha": "1.18",
     "expect.js": "0.3",
-    "matchdep": "~0.3.0",
+    "express": "4.0",
+    "mocha": "1.18",
+    "sinon": "~1.9.1"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-autoprefixer": "~0.7.2",
+    "grunt-concat-in-order": "~0.1",
+    "grunt-contrib-concat": "0.3",
+    "grunt-contrib-csslint": "0.2",
+    "grunt-contrib-cssmin": "0.7",
+    "grunt-contrib-handlebars": "0.7",
+    "grunt-contrib-less": "~0.11.3",
+    "grunt-contrib-uglify": "0.3",
+    "grunt-csscomb": "2.0",
+    "grunt-file-info": "~1.0.4",
+    "grunt-html-build": "0.3",
+    "grunt-release": "0.7",
     "lodash": "2.4",
-    "toSrc": "~0.1.3",
-    "sinon": "~1.9.1",
-    "express": "4.0"
+    "matchdep": "~0.3.0",
+    "toSrc": "~0.1.3"
   },
   "frontend-dependencies": {
     "twbs": {
