Auto build on install

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "file": "licence.lic"
   },
   "scripts": {
+    "prepublish": "grunt",
     "test": "grunt test"
   },
   "optionalDependencies": {
